--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit
-pandas
-numpy
-scikit-learn
-xgboost
-matplotlib
+pandas==2.2.3
+numpy==2.3.4
+scikit-learn==1.6.1
+xgboost==3.2.0
+matplotlib==3.10.0
 seaborn
